Added text to UFO database

--- a/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
@@ -6,9 +6,12 @@
 }
 
 <h1>Index</h1>
-
 <p>
-    <a asp-page="Create">Create New</a>
+    This database contains crowdsourced UFO observations. If you have a sighting to report, please submit it using the button below
+    and a X-COM team will be dispatched to the specified location.
+</p>
+<p>
+    <a asp-page="Create">Report UFO</a>
 </p>
 <table class="table">
     <thead>
