--- a/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
@@ -13,6 +13,12 @@
 <p>
     <a asp-page="Create">Report UFO</a>
 </p>
+<form>
+    <p>
+        Title: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
