HTML changes and display fix

--- a/Webdev-project-1/Pages/Index.cshtml
+++ b/Webdev-project-1/Pages/Index.cshtml
@@ -6,6 +6,11 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4"><img src="img/LOGO.png" alt="X-COM Logo"></h1>
+    <p>This webapp was created to crowdsource information about unidentified flying objects, colloquially known as UFOs.
+        If you or anyone you know have encountered UFOs, extraterrestrials or experienced events of an otherworldly nature, 
+        please do not hessitate to contact us.
+    </p>
+    
+    
 </div>
