--- a/Webdev-project-1/Pages/UFO_sighting_page/Edit.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>UFO_sighting</h4>
+<h4>@Html.DisplayFor(model => model.UFO_sighting.UFO_title)</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
