--- a/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
@@ -11,7 +11,7 @@
     and a X-COM team will be dispatched to the specified location.
 </p>
 <p>
-    <a asp-page="Create">Report UFO</a>
+    <button type="button" class="btn btn-primary"><a asp-page="Create" style="color:white; text-decoration: none">Report UFO</a></button>
 </p>
 <form>
     <p>
