Additional bootstrap styling

--- a/Webdev-project-1/Pages/UFO_sighting_page/Delete.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Delete.cshtml
@@ -52,7 +52,7 @@
     
     <form method="post">
         <input type="hidden" asp-for="UFO_sighting.ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> <br /><br />
         <a asp-page="./Index">Back to List</a>
     </form>
 </div>
