--- a/Webdev-project-1/Pages/UFO_sighting_page/Details.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Details.cshtml
@@ -44,6 +44,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.UFO_sighting?.ID">Edit</a> |
+    <button type="button" class="btn btn-info"><a asp-page="./Edit" asp-route-id="@Model.UFO_sighting?.ID" style="color: white; text-decoration: none">Edit</a></button> <br /><br />
     <a asp-page="./Index">Back to List</a>
 </div>
