--- a/Webdev-project-1/Pages/UFO_sighting_page/Edit.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Edit.cshtml
@@ -43,14 +43,15 @@
                 <label asp-for="UFO_sighting.Description" class="control-label"></label>
                 <input asp-for="UFO_sighting.Description" class="form-control" />
                 <span asp-validation-for="UFO_sighting.Description" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
 
+<br />
 <div>
     <a asp-page="./Index">Back to List</a>
 </div>
