Fixed create display, clarified what is filtered on in index search

--- a/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
+++ b/Webdev-project-1/Pages/UFO_sighting_page/Index.cshtml
@@ -15,7 +15,7 @@
 </p>
 <form>
     <p>
-        Title: <input type="text" asp-for="SearchString" />
+        Subject: <input type="text" asp-for="SearchString" />
         <input type="submit" value="Filter" />
     </p>
 </form>
